--- a/assets/css/ui-variable.css
+++ b/assets/css/ui-variable.css
@@ -217,7 +217,6 @@
     --status-focused:#2658ED;
     --status-disabled_bg:#0C0C0D0A;
     --status-disabled_font:#0C0C0D1F;
-
     --surface-surface:#FFFFFF;
     --surface-surface0:#FFFFFF;
     --surface-surface100:#8295A71C;
@@ -240,3 +239,240 @@
     --header-zIndex:100;
     --tab-zIndex:10;
 }
+.fc-black-0{color:var(--black-0)!important;}
+.fc-black-100{color:var(--black-100)!important;}
+.fc-black-12{color:var(--black-12)!important;}
+.fc-black-16{color:var(--black-16)!important;}
+.fc-black-20{color:var(--black-20)!important;}
+.fc-black-24{color:var(--black-24)!important;}
+.fc-black-32{color:var(--black-32)!important;}
+.fc-black-4{color:var(--black-4)!important;}
+.fc-black-40{color:var(--black-40)!important;}
+.fc-black-56{color:var(--black-56)!important;}
+.fc-black-60{color:var(--black-60)!important;}
+.fc-black-72{color:var(--black-72)!important;}
+.fc-black-8{color:var(--black-8)!important;}
+.fc-black-80{color:var(--black-80)!important;}
+.fc-black-88{color:var(--black-88)!important;}
+.fc-black-96{color:var(--black-96)!important;}
+.fc-blue-100{color:var(--blue-100)!important;}
+.fc-blue-200{color:var(--blue-200)!important;}
+.fc-blue-300{color:var(--blue-300)!important;}
+.fc-blue-400{color:var(--blue-400)!important;}
+.fc-blue-50{color:var(--blue-50)!important;}
+.fc-blue-500{color:var(--blue-500)!important;}
+.fc-blue-600{color:var(--blue-600)!important;}
+.fc-blue-700{color:var(--blue-700)!important;}
+.fc-blue-800{color:var(--blue-800)!important;}
+.fc-blue-900{color:var(--blue-900)!important;}
+.fc-cyan-100{color:var(--cyan-100)!important;}
+.fc-cyan-200{color:var(--cyan-200)!important;}
+.fc-cyan-300{color:var(--cyan-300)!important;}
+.fc-cyan-400{color:var(--cyan-400)!important;}
+.fc-cyan-50{color:var(--cyan-50)!important;}
+.fc-cyan-500{color:var(--cyan-500)!important;}
+.fc-cyan-600{color:var(--cyan-600)!important;}
+.fc-cyan-700{color:var(--cyan-700)!important;}
+.fc-cyan-800{color:var(--cyan-800)!important;}
+.fc-cyan-900{color:var(--cyan-900)!important;}
+.fc-deepblue-100{color:var(--deepblue-100)!important;}
+.fc-deepblue-200{color:var(--deepblue-200)!important;}
+.fc-deepblue-300{color:var(--deepblue-300)!important;}
+.fc-deepblue-400{color:var(--deepblue-400)!important;}
+.fc-deepblue-50{color:var(--deepblue-50)!important;}
+.fc-deepblue-500{color:var(--deepblue-500)!important;}
+.fc-deepblue-600{color:var(--deepblue-600)!important;}
+.fc-deepblue-700{color:var(--deepblue-700)!important;}
+.fc-deepblue-800{color:var(--deepblue-800)!important;}
+.fc-deepblue-900{color:var(--deepblue-900)!important;}
+.fc-gray-200{color:var(--gray-200)!important;}
+.fc-gray-300{color:var(--gray-300)!important;}
+.fc-gray-400{color:var(--gray-400)!important;}
+.fc-gray-50{color:var(--gray-50)!important;}
+.fc-gray-500{color:var(--gray-500)!important;}
+.fc-gray-600{color:var(--gray-600)!important;}
+.fc-gray-700{color:var(--gray-700)!important;}
+.fc-gray-800{color:var(--gray-800)!important;}
+.fc-gray-900{color:var(--gray-900)!important;}
+.fc-green-100{color:var(--green-100)!important;}
+.fc-green-200{color:var(--green-200)!important;}
+.fc-green-300{color:var(--green-300)!important;}
+.fc-green-400{color:var(--green-400)!important;}
+.fc-green-50{color:var(--green-50)!important;}
+.fc-green-500{color:var(--green-500)!important;}
+.fc-green-600{color:var(--green-600)!important;}
+.fc-green-700{color:var(--green-700)!important;}
+.fc-green-800{color:var(--green-800)!important;}
+.fc-green-900{color:var(--green-900)!important;}
+.fc-pink-100{color:var(--pink-100)!important;}
+.fc-pink-200{color:var(--pink-200)!important;}
+.fc-pink-300{color:var(--pink-300)!important;}
+.fc-pink-400{color:var(--pink-400)!important;}
+.fc-pink-50{color:var(--pink-50)!important;}
+.fc-pink-500{color:var(--pink-500)!important;}
+.fc-pink-600{color:var(--pink-600)!important;}
+.fc-pink-700{color:var(--pink-700)!important;}
+.fc-pink-800{color:var(--pink-800)!important;}
+.fc-pink-900{color:var(--pink-900)!important;}
+.fc-purple-100{color:var(--purple-100)!important;}
+.fc-purple-200{color:var(--purple-200)!important;}
+.fc-purple-300{color:var(--purple-300)!important;}
+.fc-purple-400{color:var(--purple-400)!important;}
+.fc-purple-50{color:var(--purple-50)!important;}
+.fc-purple-500{color:var(--purple-500)!important;}
+.fc-purple-600{color:var(--purple-600)!important;}
+.fc-purple-700{color:var(--purple-700)!important;}
+.fc-purple-800{color:var(--purple-800)!important;}
+.fc-purple-900{color:var(--purple-900)!important;}
+.fc-red-100{color:var(--red-100)!important;}
+.fc-red-200{color:var(--red-200)!important;}
+.fc-red-300{color:var(--red-300)!important;}
+.fc-red-400{color:var(--red-400)!important;}
+.fc-red-50{color:var(--red-50)!important;}
+.fc-red-500{color:var(--red-500)!important;}
+.fc-red-600{color:var(--red-600)!important;}
+.fc-red-700{color:var(--red-700)!important;}
+.fc-red-800{color:var(--red-800)!important;}
+.fc-red-900{color:var(--red-900)!important;}
+.fc-violet-100{color:var(--violet-100)!important;}
+.fc-violet-200{color:var(--violet-200)!important;}
+.fc-violet-300{color:var(--violet-300)!important;}
+.fc-violet-400{color:var(--violet-400)!important;}
+.fc-violet-50{color:var(--violet-50)!important;}
+.fc-violet-500{color:var(--violet-500)!important;}
+.fc-violet-600{color:var(--violet-600)!important;}
+.fc-violet-700{color:var(--violet-700)!important;}
+.fc-violet-800{color:var(--violet-800)!important;}
+.fc-violet-900{color:var(--violet-900)!important;}
+.fc-white-0{color:var(--white-0)!important;}
+.fc-white-100{color:var(--white-100)!important;}
+.fc-white-12{color:var(--white-12)!important;}
+.fc-white-16{color:var(--white-16)!important;}
+.fc-white-20{color:var(--white-20)!important;}
+.fc-white-24{color:var(--white-24)!important;}
+.fc-white-32{color:var(--white-32)!important;}
+.fc-white-4{color:var(--white-4)!important;}
+.fc-white-40{color:var(--white-40)!important;}
+.fc-white-56{color:var(--white-56)!important;}
+.fc-white-60{color:var(--white-60)!important;}
+.fc-white-72{color:var(--white-72)!important;}
+.fc-white-8{color:var(--white-8)!important;}
+.fc-white-80{color:var(--white-80)!important;}
+.fc-white-88{color:var(--white-88)!important;}
+.fc-white-96{color:var(--white-96)!important;}
+.fc-yellow-100{color:var(--yellow-100)!important;}
+.fc-yellow-200{color:var(--yellow-200)!important;}
+.fc-yellow-300{color:var(--yellow-300)!important;}
+.fc-yellow-400{color:var(--yellow-400)!important;}
+.fc-yellow-50{color:var(--yellow-50)!important;}
+.fc-yellow-500{color:var(--yellow-500)!important;}
+.fc-yellow-600{color:var(--yellow-600)!important;}
+.fc-yellow-700{color:var(--yellow-700)!important;}
+.fc-yellow-800{color:var(--yellow-800)!important;}
+.fc-yellow-900{color:var(--yellow-900)!important;}
+.fc-background-bg_blue{color:var(--background-bg_blue)!important;}
+.fc-background-bg_cyan{color:var(--background-bg_cyan)!important;}
+.fc-background-bg_deepBlue{color:var(--background-bg_deepBlue)!important;}
+.fc-background-bg_deepGray{color:var(--background-bg_deepGray)!important;}
+.fc-background-bg_disabled{color:var(--background-bg_disabled)!important;}
+.fc-background-bg_gray{color:var(--background-bg_gray)!important;}
+.fc-background-bg_lightGray{color:var(--background-bg_lightGray)!important;}
+.fc-background-bg_lightBlue{color:var(--background-bg_lightBlue)!important;}
+.fc-background-bg_lightCyan{color:var(--background-bg_lightCyan)!important;}
+.fc-background-bg_lightPink{color:var(--background-bg_lightPink)!important;}
+.fc-background-bg_lightPurple{color:var(--background-bg_lightPurple)!important;}
+.fc-background-bg_lightRed{color:var(--background-bg_lightRed)!important;}
+.fc-background-bg_lightViolet{color:var(--background-bg_lightViolet)!important;}
+.fc-background-bg_lightYellow{color:var(--background-bg_lightYellow)!important;}
+.fc-background-bg_pink{color:var(--background-bg_pink)!important;}
+.fc-background-bg_purple{color:var(--background-bg_purple)!important;}
+.fc-background-bg_red{color:var(--background-bg_red)!important;}
+.fc-background-bg_violet{color:var(--background-bg_violet)!important;}
+.fc-background-bg_white{color:var(--background-bg_white)!important;}
+.fc-background-bg_yellow{color:var(--background-bg_yellow)!important;}
+.fc-basic-black{color:var(--basic-black)!important;}
+.fc-basic-white{color:var(--basic-white)!important;}
+.fc-border-0{color:var(--border-0)!important;}
+.fc-border-12{color:var(--border-12)!important;}
+.fc-border-4{color:var(--border-4)!important;}
+.fc-border-72{color:var(--border-72)!important;}
+.fc-border-8{color:var(--border-8)!important;}
+.fc-border-primary_enabled{color:var(--border-primary_enabled)!important;}
+.fc-brandPrimary-blue400{color:var(--brandPrimary-blue400)!important;}
+.fc-brandPrimary-blue500{color:var(--brandPrimary-blue500)!important;}
+.fc-brandPrimary-blue600{color:var(--brandPrimary-blue600)!important;}
+.fc-button-ghost-border{color:var(--button-ghost-border)!important;}
+.fc-button-ghost-disabled{color:var(--button-ghost-disabled)!important;}
+.fc-button-ghost-enabled{color:var(--button-ghost-enabled)!important;}
+.fc-button-ghost-onDisabled{color:var(--button-ghost-onDisabled)!important;}
+.fc-button-ghost-onEnabled{color:var(--button-ghost-onEnabled)!important;}
+.fc-button-ghost-pressed{color:var(--button-ghost-pressed)!important;}
+.fc-button-ghostw-border{color:var(--button-ghostw-border)!important;}
+.fc-button-ghostw-border_disabled{color:var(--button-ghostw-border_disabled)!important;}
+.fc-button-ghostw-disabled{color:var(--button-ghostw-disabled)!important;}
+.fc-button-ghostw-enabled{color:var(--button-ghostw-enabled)!important;}
+.fc-button-ghostw-onDisabled{color:var(--button-ghostw-onDisabled)!important;}
+.fc-button-ghostw-onEnabled{color:var(--button-ghostw-onEnabled)!important;}
+.fc-button-ghostw-pressed{color:var(--button-ghostw-pressed)!important;}
+.fc-button-outlined-border{color:var(--button-outlined-border)!important;}
+.fc-button-outlined-disabled{color:var(--button-outlined-disabled)!important;}
+.fc-button-outlined-enabled{color:var(--button-outlined-enabled)!important;}
+.fc-button-outlined-onDisabled{color:var(--button-outlined-onDisabled)!important;}
+.fc-button-outlined-onEnabled{color:var(--button-outlined-onEnabled)!important;}
+.fc-button-outlined-pressed{color:var(--button-outlined-pressed)!important;}
+.fc-button-primary-disabled{color:var(--button-primary-disabled)!important;}
+.fc-button-primary-enabled{color:var(--button-primary-enabled)!important;}
+.fc-button-primary-onDisabled{color:var(--button-primary-onDisabled)!important;}
+.fc-button-primary-onEnabled{color:var(--button-primary-onEnabled)!important;}
+.fc-button-primary-pressed{color:var(--button-primary-pressed)!important;}
+.fc-button-secondary-disabled{color:var(--button-secondary-disabled)!important;}
+.fc-button-secondary-enabled{color:var(--button-secondary-enabled)!important;}
+.fc-button-secondary-onDisabled{color:var(--button-secondary-onDisabled)!important;}
+.fc-button-secondary-onEnabled{color:var(--button-secondary-onEnabled)!important;}
+.fc-button-secondary-pressed{color:var(--button-secondary-pressed)!important;}
+.fc-button-tertiary-disabled{color:var(--button-tertiary-disabled)!important;}
+.fc-button-tertiary-enabled{color:var(--button-tertiary-enabled)!important;}
+.fc-button-tertiary-onDisabled{color:var(--button-tertiary-onDisabled)!important;}
+.fc-button-tertiary-onEnabled{color:var(--button-tertiary-onEnabled)!important;}
+.fc-button-tertiary-pressed{color:var(--button-tertiary-pressed)!important;}
+.fc-button-textBtn-Enabled{color:var(--button-textBtn-Enabled)!important;}
+.fc-icon-default{color:var(--icon-default)!important;}
+.fc-icon-disabled{color:var(--icon-disabled)!important;}
+.fc-icon-gray_1{color:var(--icon-gray_1)!important;}
+.fc-icon-gray_2{color:var(--icon-gray_2)!important;}
+.fc-icon-white{color:var(--icon-white)!important;}
+.fc-shadow-blue_1{color:var(--shadow-blue_1)!important;}
+.fc-shadow-blue_2{color:var(--shadow-blue_2)!important;}
+.fc-shadow-blue_3{color:var(--shadow-blue_3)!important;}
+.fc-shadow-gray_1{color:var(--shadow-gray_1)!important;}
+.fc-shadow-gray_2{color:var(--shadow-gray_2)!important;}
+.fc-shadow-gray_3{color:var(--shadow-gray_3)!important;}
+.fc-status-active{color:var(--status-active)!important;}
+.fc-status-caution{color:var(--status-caution)!important;}
+.fc-status-dimmed{color:var(--status-dimmed)!important;}
+.fc-status-error{color:var(--status-error)!important;}
+.fc-status-help{color:var(--status-help)!important;}
+.fc-status-info{color:var(--status-info)!important;}
+.fc-status-success{color:var(--status-success)!important;}
+.fc-status-focused{color:var(--status-focused)!important;}
+.fc-status-disabled_bg{color:var(--status-disabled_bg)!important;}
+.fc-status-disabled_font{color:var(--status-disabled_font)!important;}
+.fc-surface-surface{color:var(--surface-surface)!important;}
+.fc-surface-surface0{color:var(--surface-surface0)!important;}
+.fc-surface-surface100{color:var(--surface-surface100)!important;}
+.fc-surface-surface200{color:var(--surface-surface200)!important;}
+.fc-surface-surface300{color:var(--surface-surface300)!important;}
+.fc-surface-surface400{color:var(--surface-surface400)!important;}
+.fc-surface-surface50{color:var(--surface-surface50)!important;}
+.fc-surface-surface500{color:var(--surface-surface500)!important;}
+.fc-surface-surface700{color:var(--surface-surface700)!important;}
+.fc-surface-surface800{color:var(--surface-surface800)!important;}
+.fc-surface-surface900{color:var(--surface-surface900)!important;}
+.fc-typography-black{color:var(--typography-black)!important;}
+.fc-typography-body{color:var(--typography-body)!important;}
+.fc-typography-caption{color:var(--typography-caption)!important;}
+.fc-typography-disabled{color:var(--typography-disabled)!important;}
+.fc-typography-gray{color:var(--typography-gray)!important;}
+.fc-typography-placeholder{color:var(--typography-placeholder)!important;}
+.fc-typography-title{color:var(--typography-title)!important;}
+.fc-typography-white{color:var(--typography-white)!important;}
