--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -56,638 +56,31 @@
 	<link rel="stylesheet" href="../../assets/css/ui-guide.css">
 
 	<script src="../../assets/js/ui-script.js"></script>
-	<script src="../../assets/js/ui-temp.js"></script>
-	<!-- 개발서버에서 include 제외해주세요 -->
+	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
+
 </head>
 
 <body>
-	<div>
-		<h1>card</h1>
-		<div class="column">
-			<div class="hr"></div>
+	<div class="ui-guide">
+		<h1>Form</h1>
+		<p>Radio</p>
 
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-weather">
-						<picture>
-							<source srcset="../../assets/images/figure/weather.svg">
-							<img src="../../assets/images/figure/weather.svg" alt="맑음">
-						</picture>
-						<figcaption>
-							<dl>
-								<div class="list">
-									<dt>최저</dt>
-									<dd>24°C</dd>
-								</div>
-								<div class="list">
-									<dt>최고</dt>
-									<dd>24°C</dd>
-								</div>
-							</dl>
-							<div class="card-weather-detail">
-								<span>
-									강수확률
-									<em>0%</em>
-								</span>
-								<span>
-									습도
-									<em>55%</em>
-								</span>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-news">
-						<picture>
-							<source srcset="../../assets/images/figure/news.svg">
-							<img src="../../assets/images/figure/news.svg" alt="">
-						</picture>
-						<figcaption>
-							<div class="headline chevron-30">뉴스</div>
-							<p class="ellipsis">이달 중에 완료해야 다음 업무 이달 중에 완료해야 다음 업무</p>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card-list overflow-list">
-				<div class="card">
-					<a href="#">
-						<figure class="card-anni">
+		<div class="ui-guide-section">
+			<div class="ui-guide-box">
+				<div class="card-select">
+					<div class="inp inp-large">
+						<span class="tags tags-medium tags-black-80">A타입</span>
+						<input type="radio" name="rad001" id="inp001">
+						<label for="inp001">
 							<picture>
-								<source srcset="../../assets/images/figure/w-anniversary.svg">
-								<img src="../../assets/images/figure/w-anniversary.svg" alt="">
+								<source srcset="../../assets/@temp/thumb_w.png">
+								<img src="../../assets/@temp/thumb_w.png" alt="">
 							</picture>
-							<figcaption>
-								<div class="headline">결혼 기념일</div>
-								<p class="ellipsis">업무현신팀/강감찬 대리</p>
-							</figcaption>
-						</figure>
-					</a>
-				</div>
-				<div class="card">
-					<a href="#">
-						<figure class="card-anni">
-							<picture>
-								<source srcset="../../assets/images/figure/b-anniversary.svg">
-								<img src="../../assets/images/figure/b-anniversary.svg" alt="">
-							</picture>
-							<figcaption>
-								<div class="headline">생일 축하합니다.</div>
-								<p class="ellipsis">업무현신팀/강감찬 대리</p>
-							</figcaption>
-						</figure>
-					</a>
-				</div>
-				<div class="card">
-					<a href="#">
-						<figure class="card-anni">
-							<picture>
-								<source srcset="../../assets/images/figure/b-anniversary.svg">
-								<img src="../../assets/images/figure/b-anniversary.svg" alt="">
-							</picture>
-							<figcaption>
-								<div class="headline">생일 축하합니다.</div>
-								<p class="ellipsis">업무현신팀/강감찬 대리</p>
-							</figcaption>
-						</figure>
-					</a>
+						</label>
+					</div>
 				</div>
 			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-work">
-						<picture>
-							<source srcset="../../assets/images/figure/work.svg">
-							<img src="../../assets/images/figure/work.svg" alt="">
-						</picture>
-						<figcaption>
-							<dl>
-								<div class="list">
-									<dt>출근</dt>
-									<dd>09:00</dd>
-								</div>
-								<div class="list">
-									<dt>퇴근</dt>
-									<dd>18:00</dd>
-								</div>
-							</dl>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-business">
-						<div class="thumb">
-							<picture>
-								<source srcset="../../assets/images/section/user-photo.png">
-								<img src="../../assets/images/section/user-photo.png" alt="">
-							</picture>
-						</div>
-						<figcaption>
-							<div class="chevron chevron-30">
-								<dl>
-									<dt>김비즈 책임</dt>
-									<dd>커스트마이징 EZ</dd>
-									<dd>그룹웨어팀</dd>
-								</dl>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-business">
-						<div class="thumb">
-							<picture>
-								<source srcset="../../assets/@temp/table_bg.png">
-								<img src="../../assets/@temp/table_bg.png" alt="">
-							</picture>
-						</div>
-						<figcaption>
-							<div class="chevron chevron-30">
-								<dl>
-									<dt>김비즈 책임</dt>
-									<dd>커스트마이징 EZ</dd>
-									<dd>그룹웨어팀</dd>
-								</dl>
-							</div>
-						</figcaption>
-					</figure>
-					<figure class="card-business">
-						<div class="thumb">
-							<picture>
-								<source srcset="../../assets/@temp/table_bg.png">
-								<img src="../../assets/@temp/table_bg.png" alt="">
-							</picture>
-						</div>
-						<figcaption>
-							<div class="chevron chevron-30">
-								<dl>
-									<dt>김비즈 책임</dt>
-									<dd>커스트마이징 EZ</dd>
-									<dd>그룹웨어팀</dd>
-								</dl>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-contact">
-					<figcaption>
-						<div class="row">
-							<dl>
-								<dt>휴대전화 번호</dt>
-								<dd>+82 01030521186</dd>
-							</dl>
-							<div class="card-contact-button">
-								<button type="button" class="btn-ico btn-size30 btn-round-red30"><i class="i-chat"></i><span class="blind">메시지</span></button>
-								<button type="button" class="btn-ico btn-size30 btn-round-red30"><i class="i-call"></i><span class="blind">전화</span></button>
-							</div>
-						</div>
-						<div class="row">
-							<dl>
-								<dt>메일</dt>
-								<dd>kdrago***@naver.com</dd>
-							</dl>
-							<div class="card-contact-button">
-								<button type="button" class="btn-ico btn-size30 btn-round-red30"><i class="i-mail"></i><span class="blind">메일</span></button>
-							</div>
-						</div>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-work">
-					<figcaption>
-						<div class="card-work-title">
-							<div class="left">
-								<div class="work-label work-label-red">지연 +2</div>
-								<div class="work-label work-label-blue">진행중 0%</div>
-								<div class="work-label work-label-green">완료</div>
-							</div>
-							<div class="right">
-								<div class="message-wrap"><i></i>4</div>
-								<button type="button" class="btn-ico btn-size24"><i class="i-favorite"></i><span class="blind">즐겨찾기</span></button>
-								<button type="button" class="btn-ico btn-size24 btn-active"><i class="i-favorite"></i><span class="blind">즐겨찾기 활성화</span></button>
-							</div>
-						</div>
-						<a href="#">
-							<div class="headline">일정 공유 부탁드립니다.</div>
-							<div class="name">홍길동</div>
-							<div class="date">2024.05.23 ~ 2024.05.23</div>
-						</a>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-work">
-					<figcaption>
-						<div class="card-work-title">
-							<div class="left">
-								<div class="work-label work-label-black">작성</div>
-								<div class="work-label work-label-blue">결제요청</div>
-								<div class="work-label work-label-green">완료</div>
-							</div>
-							<div class="right">
-								<div class="date mt0">2024. 05. 31 작성</div>
-							</div>
-						</div>
-						<a href="#">
-							<div class="headline">휴가(년차)</div>
-							<div class="name">리프레쉬</div>
-							<div class="d-flex a-center j-between">
-								<div class="date">2024. 05. 23 ~ 2024. 05. 23 (0.5일)</div>
-								<div class="day-status">오전반차</div>
-							</div>
-						</a>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-work">
-					<figcaption>
-						<div class="card-work-title">
-							<div class="left">
-								<div class="work-label work-label-black">배정</div>
-								<div class="work-label work-label-blue">배정</div>
-								<div class="work-label work-label-yellow">배정</div>
-								<div class="work-label work-label-gray">오픈전</div>
-							</div>
-							<div class="right">
-								<div class="date mt0 fc-black">완료</div>
-							</div>
-						</div>
-						<a href="#">
-							<div class="headline">강용관 부장 <span>그룹웨어팀</span></div>
-							<div class="name fw-700">추가 업무 배정</div>
-							<div class="date">2024. 05. 23 ~ 2024. 05. 23</div>
-						</a>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-work">
-					<figcaption>
-						<div class="card-work-title">
-							<div class="left">
-								<strong>나의 할일</strong>
-							</div>
-							<div class="right">
-								<div class="work-label work-label-green">완료</div>
-							</div>
-						</div>
-						<a href="#">
-							<div class="headline">5월달 내가 할 업무</div>
-							<div class="d-flex a-center j-between">
-								<div class="name">홍길동</div>
-								<div class="date">2024.05.23 ~ 2024.05.23</div>
-							</div>
-						</a>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-work">
-					<figcaption>
-						<div class="headline-approval">
-							<div class="work-label-green">승인</div>
-							<strong>강용관 부장</strong>
-						</div>
-						<div class="headline-approval">
-							<div class="work-label-red">반려</div>
-							<strong>강용관 부장</strong>
-						</div>
-						<div class="date">2024. 05. 23 ~ 2024. 05. 23</div>
-						<div class="headline mt10">결제의견 <span>승인합니다</span></div>
-					</figcaption>
-				</figure>
-				<div class="row-attach">
-					<ul>
-						<li>
-							<div class="attach-name">
-								<button type="button">
-									<strong>하이브리드_v1.하이브리드_v1.0.pptx</strong>
-								</button>
-							</div>
-							<div class="attach-btn">
-								<button type="button" class="btn-ico btn-size24"><i class="i-download"></i><span class="blind">다운로드</span></button>
-							</div>
-						</li>
-						<li>
-							<div class="attach-name">
-								<button type="button">
-									<strong>하이브리드_v1.0.pptx</strong>
-								</button>
-							</div>
-							<div class="attach-btn">
-								<button type="button" class="btn-ico btn-size24"><i class="i-download"></i><span class="blind">다운로드</span></button>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-comment">
-					<figcaption>
-						<div class="card-comment-title">
-							<div class="left">
-								<strong>강용관 부장</strong>
-							</div>
-							<div class="right">
-								<button type="button" class="btn-ico btn-size20"><i class="i-more"></i><span class="blind">댓글 메뉴</span></button>
-							</div>
-						</div>
-						<div class="date">2024. 05. 23 15:30 </div>
-						<p>이달 중에 완료해야 다음 업무진행시 차질이 없습니다. 급하게 요청한 건이라 빠른 처리 부탁드립니다. </p>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-commute">
-					<figcaption>
-						<div class="card-commute-date">2024. 04. 03 (금)</div>
-						<dl>
-							<div class="list">
-								<dt>출근시간</dt>
-								<dd>09:00</dd>
-							</div>
-							<div class="list">
-								<dt>퇴근시간</dt>
-								<dd>18:00</dd>
-							</div>
-						</dl>
-						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-outline-black">출근</button>
-							<button type="button" class="btn-large btn-outline-black">퇴근</button>
-							<button type="button" class="btn-large btn-outline-black">작일퇴근</button>
-						</div>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<div class="card">
-				<a href="#" class="chevron chevron-30">휴가 신청</a>
-				<a href="#" class="chevron chevron-30">출장 신청</a>
-			</div>
-			<!-- //card -->
-
-
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-dayoff">
-					<figcaption>
-						<div class="card-dayoff-title">휴가 사용일수</div>
-						<div class="card-dayoff-select">
-							<button type="button" class="chevron-30 chevron-left"><span class="blind">이전 년도</span></button>
-							<strong>2024</strong>
-							<button type="button" class="chevron-30"><span class="blind">다음 년도</span></button>
-						</div>
-						<div class="card-dayoff-period">
-							<dl>
-								<dt>사용기간</dt>
-								<dd>2024. 01. 01 ~ 2024. 12. 31</dd>
-							</dl>
-						</div>
-						<div class="card-dayoff-status">
-							<dl>
-								<div class="list">
-									<dt>발생일</dt>
-									<dd>160일</dd>
-								</div>
-								<div class="list">
-									<dt>사용일</dt>
-									<dd>2.0일</dd>
-								</div>
-								<div class="list">
-									<dt>잔여일</dt>
-									<dd class="left">14.0일</dd>
-								</div>
-							</dl>
-						</div>
-
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<div class="card">
-				<figure class="card-band">
-					<figcaption>
-						<div class="card-band-post">
-							<div class="left">
-								<strong>나의 할일</strong>
-								<span>2024.05.23</span>
-							</div>
-							<div class="right">
-								<button type="button" class="btn-small btn-inner-ico"><i class="i-thumbsup"></i><span class="blind">좋아요</span><b class="thumbsup-count">0</b></button>
-							</div>
-						</div>
-						<a href="#">
-							<div class="headline ellipsis">포스트 등록합니다. 활동 수칙 안내포스트 등록합니다. 활동 수칙 안내</div>
-						</a>
-						<div class="card-band-etc">
-							<dl>
-								<div class="list list01">
-									<dt><span class="blind">조회수</span></dt>
-									<dd>4명</dd>
-								</div>
-								<div class="list list02">
-									<dt><span class="blind">댓글건수</span></dt>
-									<dd>4개</dd>
-								</div>
-							</dl>
-						</div>
-					</figcaption>
-				</figure>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-mail">
-						<figcaption>
-							<div class="card-mail-title">
-								<div class="left">
-									<div class="work-label work-label-blue" title="읽지 않음">배정</div>
-								</div>
-								<div class="right">
-									<div class="date">2024. 05. 23 13:01</div>
-								</div>
-							</div>
-							<div class="headline ellipsis">휴가 일정 공유드립니다. </div>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-mail">
-						<figcaption>
-							<div class="card-mail-title">
-								<div class="left">
-									<div class="work-label" title="읽음">배정</div>
-								</div>
-								<div class="right">
-									<div class="date">2024. 05. 23 13:01</div>
-								</div>
-							</div>
-							<div class="headline ellipsis">휴가 일정 공유드립니다. </div>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-
-			<!-- card -->
-			<label class="card">
-				<div class="inp"><input type="checkbox"></div>
-				<figure class="card-mail">
-					<figcaption>
-						<div class="card-mail-title">
-							<div class="left">
-								<div class="work-label work-label-blue" title="읽지 않음">케이티</div>
-							</div>
-							<div class="right">
-								<div class="date">2024. 05. 23 13:01</div>
-							</div>
-						</div>
-						<div class="headline ellipsis">휴가 일정 공유드립니다. </div>
-					</figcaption>
-				</figure>
-			</label>
-			<!-- //card -->
-
-			<!-- card -->
-			<div class="card">
-				<a href="#">
-					<figure class="card-board">
-						<figcaption>
-							<div class="card-board-title">게시판명</div>
-							<div class="headline">게시글 제목 #11</div>
-							<div class="card-name-date">
-								<div class="name">이순신</div>
-								<div class="date">2024. 05. 23 ~ 2024. 05. 29 </div>
-							</div>
-							<div class="card-board-etc">
-								<dl>
-									<div class="list list01">
-										<dt><span class="blind">조회수</span></dt>
-										<dd>10명</dd>
-									</div>
-									<div class="list list02">
-										<dt><span class="blind">댓글</span></dt>
-										<dd>3명</dd>
-									</div>
-									<div class="list list03">
-										<dt><span class="blind">좋아요</span></dt>
-										<dd>20명</dd>
-									</div>
-								</dl>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
-			</div>
-			<!-- //card -->
-
-			<!-- card -->
-			<label class="card">
-				<div class="inp"><input type="checkbox"></div>
-				<figure class="d-flex j-between">
-					<figcaption>
-						<div class="headline d-flex a-center gap6"><img src="../../assets/images/ico/ico-folder.svg" alt="">폴더명 #1</div>
-						<p class="fc-gray800 mt2">2024.05.29</p>
-					</figcaption>
-					<span class="share">
-						<span class="btn-ico btn-size24 btn-active"><i class="i-favorite"></i><span class="blind">즐겨찾기 활성화</span></span>
-						<span class="fc-gray800 mt2 nowrap">공유</span>
-					</span>
-				</figure>
-			</label>
-			<!-- //card -->
-
-			<!-- card -->
-			<label class="card">
-				<div class="inp"><input type="checkbox"></div>
-				<figure class="d-flex j-between">
-					<figcaption>
-						<div class="headline d-flex a-center gap6"><img src="../../assets/images/ico/ico-folder.svg" alt="">폴더명 #1</div>
-						<p class="fc-gray800 mt2">2024.05.29</p>
-					</figcaption>
-					<span class="share">
-						<span class="btn-ico btn-size24"><i class="i-favorite"></i><span class="blind">즐겨찾기 비활성화</span></span>
-						<span class="fc-gray800 mt2 nowrap">공유안함</span>
-					</span>
-				</figure>
-			</label>
-			<!-- //card -->
-
-
-
 		</div>
 	</div>
 </body>
