--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -72,29 +72,27 @@
 				<dl>
 					<dt></dt>
 					<dd>
-						<div class="inp inp-large">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-large">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-large">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
-							</label>
+						<div class="inp-column-list">
+							<div class="inp inp-large">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">텍스트를 입력해주세요</span>
+								</label>
+							</div>
+							<div class="inp inp-large">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">텍스트를 입력해주세요</span>
+									<span class="label-subtitle">서브텍스트를 입력해주세요</span>
+								</label>
+							</div>
+							<div class="inp inp-large">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+									<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
+								</label>
+							</div>
 						</div>
 					</dd>
 				</dl>
@@ -105,29 +103,27 @@
 				<dl>
 					<dt></dt>
 					<dd>
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-								<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
-							</label>
+						<div class="inp-column-list">
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">텍스트를 입력해주세요</span>
+								</label>
+							</div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">텍스트를 입력해주세요</span>
+									<span class="label-subtitle">서브텍스트를 입력해주세요</span>
+								</label>
+							</div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+									<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
+								</label>
+							</div>
 						</div>
 					</dd>
 				</dl>
@@ -139,29 +135,27 @@
 			<dl>
 				<dt></dt>
 				<dd>
-					<div class="inp inp-small">
-						<label>
-							<input type="checkbox">
-							<span class="label-title">텍스트를 입력해주세요</span>
-						</label>
-						<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
-					</div>
-				</dd>
-				<dd>
-					<div class="inp inp-small">
-						<label>
-							<input type="checkbox">
-							<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-						</label>
-						<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
-					</div>
-				</dd>
-				<dd>
-					<div class="inp inp-small">
-						<label>
-							<input type="checkbox">
-							<span class="label-title">텍스트를 입력해주세요</span>
-						</label>
+					<div class="inp-column-list">
+						<div class="inp inp-small">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">텍스트를 입력해주세요</span>
+							</label>
+							<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
+						</div>
+						<div class="inp inp-small">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+							</label>
+							<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
+						</div>
+						<div class="inp inp-small">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">텍스트를 입력해주세요</span>
+							</label>
+						</div>
 					</div>
 				</dd>
 			</dl>
