--- a/assets/css/ui-default.css
+++ b/assets/css/ui-default.css
@@ -234,6 +234,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .my15 {margin-top:15px!important;margin-bottom:15px!important;}
 .my16 {margin-top:16px!important;margin-bottom:16px!important;}
 .my20 {margin-top:20px!important;margin-bottom:20px!important;}
+.my24 {margin-top:24px!important;margin-bottom:24px!important;}
 .my25 {margin-top:25px!important;margin-bottom:25px!important;}
 .my30 {margin-top:30px!important;margin-bottom:30px!important;}
 .my35 {margin-top:35px!important;margin-bottom:35px!important;}
@@ -251,6 +252,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mx15 {margin-left:15px!important;margin-right:15px!important;}
 .mx16 {margin-left:16px!important;margin-right:16px!important;}
 .mx20 {margin-left:20px!important;margin-right:20px!important;}
+.mx24 {margin-left:24px!important;margin-right:24px!important;}
 .mx25 {margin-left:25px!important;margin-right:25px!important;}
 .mx30 {margin-left:30px!important;margin-right:30px!important;}
 .mx35 {margin-left:35px!important;margin-right:35px!important;}
