--- a/assets/css/ui-plugins.css
+++ b/assets/css/ui-plugins.css
@@ -30,7 +30,7 @@ select.ql-ui {height:initial;appearance:auto;font-size:initial;font-weight:initi
 /* micromodal */
 .modal {font-family:inherit;}
 .micromodal-slide.is-open {position:relative;z-index:calc(var(--header-zIndex) +  1000);}
-.modal__container {padding:0;max-width:none;max-height:100%;flex:1 1 100%;background-color:var(--white-100);border-radius:20px 20px 0 0;display:flex;flex-direction:column;}
+.modal__container {padding:0;max-width:none;max-height: calc(100% - 40px);flex:1 1 100%;background-color:var(--white-100);border-radius:20px 20px 0 0;display:flex;flex-direction:column;}
 .modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;flex:1 1 calc(100% - 56px);overflow-y:auto;}
 .modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);}
 .modal__header .modal__title {flex:1 1 100%;display:flex;justify-content:center;}
