--- a/html/components/component_modal.html
+++ b/html/components/component_modal.html
@@ -63,89 +63,20 @@
 
 <body>
 
-	<article>
-		<button type="button" class="btn-large btn-black" data-micromodal-trigger="modal5">modal5</button>
-		<div class="d-flex j-end"><button type="button" class="btn-large btn-black" data-micromodal-trigger="modal5">modal5</button></div>
-		<button type="button" class="btn-large btn-black" data-micromodal-trigger="modal1">data-micromodal-trigger="modal1"</button>
-		<button type="button" class="btn-large btn-black" data-micromodal-trigger="modal2">data-micromodal-trigger="modal2"</button>
-		<button type="button" class="btn-large btn-black" data-micromodal-trigger="modal4">data-micromodal-trigger="modal4"</button>
+	<div class="ui-guide">
+		<h1>Modal</h1>
+		<div class="ui-guide-section">
+			<div class="guide-column-list">
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-businesscard">modal-businesscard</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-businesscard-regist">modal-businesscard-regist</button>
 
-	</article>
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide modal" id="modal1" aria-hidden="true">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-				<div class="modal__content">
-
-
-					<!-- main -->
-					<main>
-						<!-- header -->
-						<header>
-							<div class="main-header">
-								<div class="left">
-								</div>
-								<div class="center">
-									<h1>축하합니다</h1>
-								</div>
-								<div class="right">
-									<button type="button" class="btn-ico btn-size30" data-micromodal-close><i class="i-close"></i><span class="blind">닫기</span></button>
-								</div>
-							</div>
-						</header>
-						<!-- //header -->
-
-
-					</main>
-					<!-- main -->
-
-				</div>
 			</div>
 		</div>
 	</div>
-	<!-- //micromodal -->
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide modal" id="modal2" aria-hidden="true">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container modal__container__left" role="dialog" aria-modal="true">
-				<div class="modal__content">
-
-
-					<!-- main -->
-					<main>
-						<!-- header -->
-						<header>
-							<div class="main-header">
-								<div class="left">
-								</div>
-								<div class="center">
-									<h1>축하합니다</h1>
-								</div>
-								<div class="right">
-									<button type="button" class="btn-ico btn-size30" data-micromodal-close><i class="i-close"></i><span class="blind">닫기</span></button>
-								</div>
-							</div>
-						</header>
-						<!-- //header -->
-
-
-
-					</main>
-					<!-- main -->
-
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal4" aria-hidden="true">
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
@@ -154,59 +85,33 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
-					<div class="content">
-						<p class="description info">순서를 바꿀 명함을 끌어 순서를 변경하세요.</p>
 
-						<div id="sortingBusinessCard" class="list-group">
-							<div class="list-group-item">Item 1</div>
-							<div class="list-group-item">Item 2</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 3</div>
-							<div class="list-group-item">Item 4</div>
-							<div class="list-group-item">Item 5</div>
-							<div class="list-group-item">Item 6</div>
+					<div class="content">
+						<p class="description info mx8 my24">순서를 바꿀 명함을 끌어 순서를 변경하세요.</p>
+
+						<div id="sortingBusinessCard" class="businesscard-list">
+							<div class="list-group-item">
+								<strong class="title-medium">Item 1</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 2</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+
 						</div>
 					</div>
+
 				</div>
 				<div class="modal__footer">
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary">저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -218,33 +123,192 @@
 
 
 
-	<!-- bottom-btn -->
-	<div class="bottom-btn">
-		<div class="btn-wrap">
-			<button type="button" class="btn-large btn-black" data-micromodal-trigger="modal5">modal5</button>
-			<button type="button" class="btn-large btn-outline-red">취소</button>
-			<button type="button" class="btn-large btn-outline-red">취소</button>
-			<button type="button" class="btn-large btn-black" data-micromodal-trigger="modal5">modal5</button>
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard-regist">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
 
+				<div class="modal__header">
+					<strong class="modal__title title-large">명함 순서 설정</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<!-- group-form -->
+						<div class="group-form">
+							<div class="group-title">
+								<strong class="title-medium">명함 스타일</strong>
+							</div>
+							<div class="group-content">
+								<div class="swiper swiper-business-card">
+									<!-- Additional required wrapper -->
+									<div class="swiper-wrapper">
+										<!-- Slides -->
+										<div class="swiper-slide">
+											<div class="card-select">
+												<div class="inp inp-large">
+													<span class="tags tags-medium tags-black-80">A타입</span>
+													<input type="radio" name="rad001" id="inp001">
+													<label for="inp001">
+														<picture>
+															<source srcset="../../assets/@temp/thumb_w.png">
+															<img src="../../assets/@temp/thumb_w.png" alt="">
+														</picture>
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="swiper-slide">
+											<div class="card-select">
+												<div class="inp inp-large">
+													<span class="tags tags-medium tags-black-80">B타입</span>
+													<input type="radio" name="rad001" id="inp002">
+													<label for="inp002">
+														<picture>
+															<source srcset="../../assets/@temp/thumb_w.png">
+															<img src="../../assets/@temp/thumb_w.png" alt="">
+														</picture>
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="swiper-slide">
+											<div class="card-select">
+												<div class="inp inp-large">
+													<span class="tags tags-medium tags-black-80">C타입</span>
+													<input type="radio" name="rad001" id="inp003">
+													<label for="inp003">
+														<picture>
+															<source srcset="../../assets/@temp/thumb_w.png">
+															<img src="../../assets/@temp/thumb_w.png" alt="">
+														</picture>
+													</label>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">별칭 <i class="apos" aria-label="필수 입력">*</i></strong>
+							</div>
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap">
+										<input type="text" placeholder="별칭">
+									</div>
+									<p class="validate-text"></p>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">직급</strong>
+							</div>
+							<div class="group-content">
+								<div class="inp inp-tab">
+									<input type="radio" name="inp-tab01" aria-label="과장" checked>
+									<input type="radio" name="inp-tab01" aria-label="팀장">
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+						<!-- group -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">휴대폰 번호 노출 <i class="apos" aria-label="필수 입력">*</i></strong>
+								<div class="inp inp-toggle">
+									<label>
+										<input type="checkbox" aria-label="휴대폰 번호 노출">
+									</label>
+								</div>
+							</div>
+						</div>
+						<!-- //group -->
+
+						<div class="stroke my40"></div>
+
+						<!-- group -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">자격증</strong>
+								<p class="description info fs-13 fw-400">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p>
+							</div>
+							<div class="group-content">
+								<div class="inp-column-list">
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox">
+											<span class="label-title">선택안함</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox">
+											<span class="label-title">신용위험분석사(CRA)1차</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox">
+											<span class="label-title">공인신용분석사</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox">
+											<span class="label-title">CFP(국제공인재무설계사)</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox">
+											<span class="label-title">CDCS(국제공인신용장전문가자격증)</span>
+										</label>
+									</div>
+								</div>
+								<p class="description caution fs-13 fw-400">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색 후 결과에서 본인 정보를 클릭 후 수정할 수 있습니다.</p>
+
+							</div>
+						</div>
+						<!-- //group -->
+
+					</div>
+
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" onclick="toast_succes()" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
 		</div>
 	</div>
-	<!-- //bottom-btn -->
-
-
+	<!-- //micromodal -->
 	<script>
-		
-		// document.addEventListener("DOMContentLoaded", function() {
-		// 	MicroModal.show('modal1', {
-		// 		// awaitCloseAnimation: true,
-		// 		onShow: function(modalPopup) {
-		// 			console.info(modalPopup.id + 'is shown')
-
-		// 		},
-		// 		onClose: function(modalPopup) {
-		// 			console.info(modalPopup.id + 'is hidden')
-		// 		}
-		// 	});
-		// });
+		// toast
+		function toast_succes() {
+			toastr.success('', '저장되었습니다.')
+		}
 	</script>
 </body>
 
